@@ -7,23 +7,40 @@ body {
     font-family: "Lucida Grande";
     font-size: 11px;
     overflow-x: hidden; /* supress horizontal scrolling */
+    background-color: #dde4eb;
 }
 
 p, img, pre {
     margin: 5px 0 0 5px;
 }
 
+/*
+  Standard mail.app sidebar colors:
+  #dde4eb - light blue background
+  #a1afce - border-top of selected item (which turns to white text with 1px vertical shadow)
+  #b0bedb - top value of gradient
+  #8194bc - bottom value of gradient
+*/
+
 h3 {
     padding: 1px 0 1px 5px;
     margin-top: 10px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    background-color: #e8e8e8; /* TODO - this is a cheat. And WRONG. */
+    border-top: 1px solid a1afce;
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#b0bedb), to(#8194bc));
     white-space: nowrap;
 }
 
-h3,p h3,a {
-    text-decoration: none;
+h3 a {
+  color: white;
+  text-shadow: 0px 1px 2px #808080;
+}
+
+h3,p,a {
+  text-decoration: none;
+}
+
+p a {
+  color: black;
 }
 
 h3 a:hover, p a:hover {
@@ -45,14 +62,11 @@ h3 img.guess {
 }
 
 img.flickr-image {
-/*    width :75px;
-    height: 75px;
-    */
     width: 40px;
     height: 40px;
     float: left;
     margin-right: 5px;
-    border: 1px solid black;
+    border: none;
 }
 
 span.feed-date {
